--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-
 plugins {
     id 'java'
     id 'maven-publish'
@@ -6,95 +5,45 @@ plugins {
     id 'org.ajoberstar.git-publish' version '3.0.0'
 }
 
-apply plugin: 'idea'
-apply plugin: 'eclipse'
-
-compileJava {
-    options.annotationProcessorGeneratedSourcesDirectory = file('src/main/generated')
-}
-
-compileTestJava {
-    options.annotationProcessorGeneratedSourcesDirectory = file('src/test/generated')
-}
+group = 'com.trophonix'
+version = '3.84'
+description = 'TradePlus'
 
 repositories {
     mavenLocal()
-    maven {
-        url = uri('https://hub.spigotmc.org/nexus/content/repositories/snapshots/')
-    }
+    maven { url = uri('https://hub.spigotmc.org/nexus/content/repositories/snapshots/') }
+    maven { url = uri('https://oss.sonatype.org/content/repositories/snapshots') }
+    maven { url = uri('https://nexus.hc.to/content/repositories/pub_releases') }
+    maven { url = uri('https://repo.dakanilabs.com/repository/maven-public/') }
+    maven { url = uri('https://jitpack.io') }
+    maven { url = uri('https://repo.aikar.co/content/groups/aikar/') }
+    maven { url = uri('https://repo.codemc.org/repository/maven-public/') }
+    maven { url = uri('https://repo.maven.apache.org/maven2/') }
 
     maven {
-        url = uri('https://oss.sonatype.org/content/repositories/snapshots')
+        url("https://repo.coralmc.it/releases")
+        credentials {
+            username "$mavenUser"
+            password "$mavenPassword"
+        }
+
+        authentication {
+            basic(BasicAuthentication)
+        }
     }
 
-    maven {
-        url = uri('https://nexus.hc.to/content/repositories/pub_releases')
-
-        // allowInsecureProtocol = true
-    }
-
-    maven {
-        url = uri('https://repo.dakanilabs.com/repository/maven-public/')
-    }
-
-    maven {
-        url = uri('https://repo.minebench.de/')
-    }
-
-    maven {
-        url = uri('https://jitpack.io')
-    }
-
-    maven {
-        url = uri('https://cdn.jsdelivr.net/gh/ProSavage/SavageFactions@1.6.x/')
-    }
-
-    maven {
-        url = uri('https://repo.aikar.co/content/groups/aikar/')
-    }
-
-    maven {
-        url = uri('https://repo.codemc.org/repository/maven-public/')
-    }
-
-    maven {
-        url = uri('https://repo.maven.apache.org/maven2/')
-    }
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.encoding = "UTF-8"
-}
-
-compileJava {
-    options.encoding = "UTF-8"
-}
-
-task sourceJar(type: Jar) {
-    from sourceSets.main.allJava
 }
 
 dependencies {
+    compileOnly 'it.coralrp.laroc:api:1.0.9-SNAPSHOT'
     implementation 'com.google.guava:guava:21.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'net.wesjd:anvilgui:1.9.0-SNAPSHOT'
     implementation 'co.aikar:taskchain-bukkit:3.7.2'
-    implementation 'org.codemc.worldguardwrapper:worldguardwrapper:1.1.6-SNAPSHOT'
     compileOnly 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
     compileOnly 'org.projectlombok:lombok:1.18.20'
-    compileOnly 'net.milkbowl.vault:VaultAPI:1.7'
-    compileOnly 'com.github.ProSavage:SavageFactions:1.6.3-RC'
-    compileOnly 'com.github.Angeschossen:LandsAPI:4.5.2.0'
-    compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
-    testCompileOnly 'org.projectlombok:lombok:1.18.20'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 }
-
-group = 'com.trophonix'
-version = '3.84'
-description = 'TradePlus'
-java.sourceCompatibility = JavaVersion.VERSION_1_8
 
 publishing {
     publications {
@@ -104,25 +53,18 @@ publishing {
     }
 }
 
-ext {
-    project = 'TradePlus'
-}
-
-def targetJavaVersion = 17
-
-java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    sourceCompatibility = javaVersion
-    targetCompatibility = javaVersion
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
-    }
-}
-
 tasks.withType(JavaCompile).configureEach {
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        options.release = targetJavaVersion
-    }
+    options.encoding = "UTF-8"
+}
+
+tasks.register('sourceJar', Jar) {
+    from sourceSets.main.allJava
+}
+
+shadowJar {
+    archiveBaseName.set('TradePlus')
+    archiveClassifier.set('')
+    archiveVersion.set('')
 }
 
 processResources {
