--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ repositories {
 
 dependencies {
     compileOnly 'it.coralrp.laroc:api:1.0.9-SNAPSHOT'
+    compileOnly 'it.coralrp.laroc.nametags:api:1.0.0-SNAPSHOT'
     implementation 'com.google.guava:guava:21.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'net.wesjd:anvilgui:1.9.0-SNAPSHOT'
