--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'java'
     id 'maven-publish'
-    id "com.github.johnrengelman.shadow" version "6.1.0"
-    id 'org.ajoberstar.git-publish' version '3.0.0'
+    id "com.github.johnrengelman.shadow" version "8.1.1"
+    id 'org.ajoberstar.git-publish' version '4.2.2'
 }
 
 group = 'com.trophonix'
@@ -46,20 +46,25 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
 }
 
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+}
+
 publishing {
     publications {
-        maven(MavenPublication) {
-            from(components.java)
+        library(MavenPublication) {
+            from components.java
+
+            artifact sourceJar {
+                archiveClassifier.set('sources')
+                from sourceSets.main.allSource
+            }
         }
     }
 }
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = "UTF-8"
-}
-
-tasks.register('sourceJar', Jar) {
-    from sourceSets.main.allJava
 }
 
 shadowJar {
