--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,10 @@ name: TradePlus
 version: ${project.version}
 author: Trophonix
 main: com.trophonix.tradeplus.TradePlus
+depend:
+  - Laroc
+  - nametags-module
+  - chat-module
 softdepend: [Vault,EnjinMinecraftPlugin,GriefPrevention,PlayerPoints,TokenManager,BeastTokens,TokenEnchant,WorldGuard,VotingPlugin]
 api-version: "1.16"
 commands:
